// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CheckboxMultiselect renders by default 1`] = `
.c2 {
  display: inline-block;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 1rem;
}

.c5 {
  display: inline-block;
  margin-left: 1.75rem;
  color: #8697A2;
}

.c5::before,
.c5::after {
  content: "";
  position: absolute;
  width: 1rem;
  height: 1rem;
  top: 0.0625rem;
  left: 0;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
  -webkit-transition-timing-function: ease;
  transition-timing-function: ease;
}

.c5::before {
  background-color: #4C5159;
  border-radius: 50%;
  opacity: 0;
  -webkit-transform: none;
  -ms-transform: none;
  transform: none;
  -webkit-transition-property: background-color,-webkit-transform,opacity;
  -webkit-transition-property: background-color,transform,opacity;
  transition-property: background-color,transform,opacity;
  will-change: transform,opacity;
}

.c5::after {
  border: 1px solid #8697A2;
  border-radius: 0.25rem;
  background-color: transparent;
  -webkit-transition-property: border-color;
  transition-property: border-color;
}

.c3 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.c3:hover:enabled + span::before,
.c3:focus:enabled + span::before {
  opacity: 0.5;
  -webkit-transform: scale(2);
  -ms-transform: scale(2);
  transform: scale(2);
}

.c3:hover:enabled:checked + span::before,
.c3:focus:enabled:checked + span::before {
  opacity: 0.1;
  background-color: #19E170;
}

.c3:hover:enabled:not(:checked) + span::after,
.c3:focus:enabled:not(:checked) + span::after {
  border-color: #8697A2;
}

.c3:checked + span::after {
  background-image: url('data:image/svg+xml;utf8, %3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22100%25%22%20height%3D%22auto%22%20fill%3D%22none%22%20viewBox%3D%220%200%2020%2014%22%3E%3Cpath%20fill%3D%22%230CD463%22%20fill-rule%3D%22evenodd%22%20d%3D%22M18%200c-.56%200-1.06.22-1.42.58L8%209.18l-4.58-4.6C3.06%204.22%202.56%204%202%204%20.9%204%200%204.9%200%206c0%20.56.22%201.06.58%201.42l6%206c.36.36.86.58%201.42.58.56%200%201.06-.22%201.42-.58l10-10c.36-.36.58-.86.58-1.42%200-1.1-.9-2-2-2z%22%20clip-rule%3D%22evenodd%22%3E%3C%2Fpath%3E%3C%2Fsvg%3E');
  background-repeat: no-repeat;
  background-position: center;
  background-size: 0.625rem;
  border-color: #0CD463;
}

.c3[disabled] + span {
  color: #353C44;
  cursor: not-allowed;
}

.c3[disabled] + span::after {
  border-color: #353C44;
}

.c0 {
  list-style: none;
  max-height: 250px;
  overflow: auto;
  padding-left: 0.5rem;
}

.c1 {
  margin: 1.5rem 0;
}

.c1:first-child {
  margin-top: 0.75rem;
}

.c1:last-child {
  margin-bottom: 0.75rem;
}

.c1 ul {
  padding-left: 0;
  margin-top: 1.5rem;
}

.c4 + span::after {
  border-radius: 0.125rem;
}

.c4:checked + span::after {
  background-color: #0CD463;
  background-image: url('data:image/svg+xml;utf8, %3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22100%25%22%20height%3D%22auto%22%20fill%3D%22none%22%20viewBox%3D%220%200%2020%2014%22%3E%3Cpath%20fill%3D%22%23FFFFFF%22%20fill-rule%3D%22evenodd%22%20d%3D%22M18%200c-.56%200-1.06.22-1.42.58L8%209.18l-4.58-4.6C3.06%204.22%202.56%204%202%204%20.9%204%200%204.9%200%206c0%20.56.22%201.06.58%201.42l6%206c.36.36.86.58%201.42.58.56%200%201.06-.22%201.42-.58l10-10c.36-.36.58-.86.58-1.42%200-1.1-.9-2-2-2z%22%20clip-rule%3D%22evenodd%22%3E%3C%2Fpath%3E%3C%2Fsvg%3E');
}

<div>
  <ul
    className="c0"
  >
    <li
      className="c1"
    >
      <label
        className="c2"
        htmlFor="1"
      >
        <input
          checked={false}
          className="c3 c4"
          disabled={false}
          id="1"
          onChange={[Function]}
          type="checkbox"
          value={1}
        />
        <span
          className="c5"
        >
          Game 1
        </span>
      </label>
    </li>
    <li
      className="c1"
    >
      <label
        className="c2"
        htmlFor="2"
      >
        <input
          checked={false}
          className="c3 c4"
          disabled={false}
          id="2"
          onChange={[Function]}
          type="checkbox"
          value={2}
        />
        <span
          className="c5"
        >
          Game 2
        </span>
      </label>
    </li>
    <li
      className="c1"
    >
      <label
        className="c2"
        htmlFor="3"
      >
        <input
          checked={false}
          className="c3 c4"
          disabled={false}
          id="3"
          onChange={[Function]}
          type="checkbox"
          value={3}
        />
        <span
          className="c5"
        >
          Game 3
        </span>
      </label>
    </li>
  </ul>
</div>
`;

exports[`CheckboxMultiselect renders with inner options 1`] = `
.c6 {
  display: inline-block;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 1rem;
}

.c9 {
  display: inline-block;
  margin-left: 1.75rem;
  color: #8697A2;
}

.c9::before,
.c9::after {
  content: "";
  position: absolute;
  width: 1rem;
  height: 1rem;
  top: 0.0625rem;
  left: 0;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
  -webkit-transition-timing-function: ease;
  transition-timing-function: ease;
}

.c9::before {
  background-color: #4C5159;
  border-radius: 50%;
  opacity: 0;
  -webkit-transform: none;
  -ms-transform: none;
  transform: none;
  -webkit-transition-property: background-color,-webkit-transform,opacity;
  -webkit-transition-property: background-color,transform,opacity;
  transition-property: background-color,transform,opacity;
  will-change: transform,opacity;
}

.c9::after {
  border: 1px solid #8697A2;
  border-radius: 0.25rem;
  background-color: transparent;
  -webkit-transition-property: border-color;
  transition-property: border-color;
}

.c7 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.c7:hover:enabled + span::before,
.c7:focus:enabled + span::before {
  opacity: 0.5;
  -webkit-transform: scale(2);
  -ms-transform: scale(2);
  transform: scale(2);
}

.c7:hover:enabled:checked + span::before,
.c7:focus:enabled:checked + span::before {
  opacity: 0.1;
  background-color: #19E170;
}

.c7:hover:enabled:not(:checked) + span::after,
.c7:focus:enabled:not(:checked) + span::after {
  border-color: #8697A2;
}

.c7:checked + span::after {
  background-image: url('data:image/svg+xml;utf8, %3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22100%25%22%20height%3D%22auto%22%20fill%3D%22none%22%20viewBox%3D%220%200%2020%2014%22%3E%3Cpath%20fill%3D%22%230CD463%22%20fill-rule%3D%22evenodd%22%20d%3D%22M18%200c-.56%200-1.06.22-1.42.58L8%209.18l-4.58-4.6C3.06%204.22%202.56%204%202%204%20.9%204%200%204.9%200%206c0%20.56.22%201.06.58%201.42l6%206c.36.36.86.58%201.42.58.56%200%201.06-.22%201.42-.58l10-10c.36-.36.58-.86.58-1.42%200-1.1-.9-2-2-2z%22%20clip-rule%3D%22evenodd%22%3E%3C%2Fpath%3E%3C%2Fsvg%3E');
  background-repeat: no-repeat;
  background-position: center;
  background-size: 0.625rem;
  border-color: #0CD463;
}

.c7[disabled] + span {
  color: #353C44;
  cursor: not-allowed;
}

.c7[disabled] + span::after {
  border-color: #353C44;
}

.c5 {
  vertical-align: middle;
  color: #8697A2;
}

.c2 {
  position: relative;
}

.c3 {
  position: relative;
  padding-left: 2.1875rem;
}

.c4 {
  background: none;
  border: none;
  padding: 0.125rem;
  -webkit-transform: translateY(-50%) rotate(0);
  -ms-transform: translateY(-50%) rotate(0);
  transform: translateY(-50%) rotate(0);
  -webkit-transition: -webkit-transform 0.2s ease;
  -webkit-transition: transform 0.2s ease;
  transition: transform 0.2s ease;
  position: absolute;
  left: 0;
  top: 50%;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c0 {
  list-style: none;
  max-height: 250px;
  overflow: auto;
  padding-left: 0.5rem;
}

.c1 {
  margin: 1.5rem 0;
}

.c1:first-child {
  margin-top: 0.75rem;
}

.c1:last-child {
  margin-bottom: 0.75rem;
}

.c1 ul {
  padding-left: 0;
  margin-top: 1.5rem;
}

.c8 + span::after {
  border-radius: 0.125rem;
}

.c8:checked + span::after {
  background-color: #0CD463;
  background-image: url('data:image/svg+xml;utf8, %3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22100%25%22%20height%3D%22auto%22%20fill%3D%22none%22%20viewBox%3D%220%200%2020%2014%22%3E%3Cpath%20fill%3D%22%23FFFFFF%22%20fill-rule%3D%22evenodd%22%20d%3D%22M18%200c-.56%200-1.06.22-1.42.58L8%209.18l-4.58-4.6C3.06%204.22%202.56%204%202%204%20.9%204%200%204.9%200%206c0%20.56.22%201.06.58%201.42l6%206c.36.36.86.58%201.42.58.56%200%201.06-.22%201.42-.58l10-10c.36-.36.58-.86.58-1.42%200-1.1-.9-2-2-2z%22%20clip-rule%3D%22evenodd%22%3E%3C%2Fpath%3E%3C%2Fsvg%3E');
}

<div>
  <ul
    className="c0"
  >
    <li
      className="c1"
    >
      <div
        className="c2"
      >
        <div
          className="c3"
        >
          <button
            className="c4"
            onClick={[Function]}
            open={false}
          >
            <svg
              className="c5"
              color="trunks.100"
              height="1em"
              viewBox="0 0 12 20"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 2.623L7.014 10 0 17.376 2.5 20 12 10 2.498 0z"
                fill="currentColor"
                fillRule="evenodd"
              />
            </svg>
          </button>
          <label
            className="c6"
            htmlFor="1"
          >
            <input
              checked={false}
              className="c7 c8"
              disabled={false}
              id="1"
              onChange={[Function]}
              type="checkbox"
              value={1}
            />
            <span
              className="c9"
            >
              Game 1
            </span>
          </label>
        </div>
      </div>
    </li>
    <li
      className="c1"
    >
      <div
        className="c2"
      >
        <div
          className="c3"
        >
          <button
            className="c4"
            onClick={[Function]}
            open={false}
          >
            <svg
              className="c5"
              color="trunks.100"
              height="1em"
              viewBox="0 0 12 20"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 2.623L7.014 10 0 17.376 2.5 20 12 10 2.498 0z"
                fill="currentColor"
                fillRule="evenodd"
              />
            </svg>
          </button>
          <label
            className="c6"
            htmlFor="2"
          >
            <input
              checked={false}
              className="c7 c8"
              disabled={false}
              id="2"
              onChange={[Function]}
              type="checkbox"
              value={2}
            />
            <span
              className="c9"
            >
              Game 2
            </span>
          </label>
        </div>
      </div>
    </li>
    <li
      className="c1"
    >
      <div
        className="c2"
      >
        <div
          className="c3"
        >
          <button
            className="c4"
            onClick={[Function]}
            open={false}
          >
            <svg
              className="c5"
              color="trunks.100"
              height="1em"
              viewBox="0 0 12 20"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 2.623L7.014 10 0 17.376 2.5 20 12 10 2.498 0z"
                fill="currentColor"
                fillRule="evenodd"
              />
            </svg>
          </button>
          <label
            className="c6"
            htmlFor="3"
          >
            <input
              checked={false}
              className="c7 c8"
              disabled={false}
              id="3"
              onChange={[Function]}
              type="checkbox"
              value={3}
            />
            <span
              className="c9"
            >
              Game 3
            </span>
          </label>
        </div>
      </div>
    </li>
  </ul>
</div>
`;
